adjustments for SRS data